<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main2Activity">

    <EditText
        android:id="@+id/Numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Numero"
        android:inputType="number" />

    <Button
        android:id="@+id/Calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Calcular" />

    <TextView
        android:id="@+id/Resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        tools:text="@string/Numero1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Button" />
</LinearLayout>