<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lyh_Temperatura1"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/CelciusFarengel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/CelciusFarengel"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/FarengelCelcius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/FarengelCelcius"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyh_Temperatura2"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/CelciusKelvin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/CelciusKelvin"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/KelvinCelcius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/KelvinCelcius"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyh_Distancia1"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/MetrosCentimetros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/MetrosCentimetros"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/CentimetrosMetros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/CentimetrosMetros"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyh_Distancia2"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/CentimetrosPulgadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/CentimetrosPulgadas"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/PulgadasCentimetros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/PulgadasCentimetros"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>